force-app/main/default/objects/ssot__IndicatorAssignment__dlm/fields/ssot__IndicatorAssignmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__IndicatorAssignmentStatus__c</fullName>
    <label>Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IndicatorAssignmentStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>