force-app/main/default/objects/ssot__IndicatorAssignment__dlm/fields/ssot__OutcomeIntentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutcomeIntentId__c</fullName>
    <label>Outcome Intent</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutcomeIntentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>