force-app/main/default/objects/ssot__IndicatorAssignment__dlm/fields/ssot__rel_1716668778828_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668778828_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IndicatorAssignment_ProgramId_map_Pr_rel</label>
    <referenceTo>ssot__Program__dlm</referenceTo>
    <relationshipLabel>IndicatorAssignment_ProgramId_map_Pr_rel</relationshipLabel>
    <relationshipName>rel_1716668778828_end</relationshipName>
    <type>Lookup</type>
</CustomField>