force-app/main/default/objects/ssot__IndicatorAssignment__dlm/fields/ssot__rel_1716670497261_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716670497261_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IndicatorAssignment_OutcomeIntentId__rel</label>
    <referenceTo>ssot__OutcomeIntent__dlm</referenceTo>
    <relationshipLabel>IndicatorAssignment_OutcomeIntentId__rel</relationshipLabel>
    <relationshipName>rel_1716670497261_end</relationshipName>
    <type>Lookup</type>
</CustomField>