force-app/main/default/objects/ssot__IndicatorAssignment__dlm/fields/ssot__rel_1716726571599_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726571599_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IndicatorAssignment_IndicatorDefinit_rel</label>
    <referenceTo>ssot__IndicatorDefinition__dlm</referenceTo>
    <relationshipLabel>IndicatorAssignment_IndicatorDefinit_rel</relationshipLabel>
    <relationshipName>rel_1716726571599_end</relationshipName>
    <type>Lookup</type>
</CustomField>